[gd_scene load_steps=4 format=3 uid="uid://ddamewq24ewbi"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_cjh6t"]
[ext_resource type="PackedScene" uid="uid://djck1bb2tl1lg" path="res://scenes/enemy_spawner.tscn" id="2_ffuqo"]
[ext_resource type="PackedScene" uid="uid://cv2u7uwel82og" path="res://scenes/background.tscn" id="4_nvxsf"]

[node name="Level_1" type="Node2D"]
script = ExtResource("1_cjh6t")

[node name="EnemySpawner" parent="." instance=ExtResource("2_ffuqo")]

[node name="background_Control" parent="." instance=ExtResource("4_nvxsf")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -54.0
offset_right = -270.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2

[node name="BossTimer" type="Timer" parent="."]
wait_time = 6.322
one_shot = true
autostart = true

[connection signal="level_finished" from="EnemySpawner" to="." method="_on_enemy_spawner_level_finished"]
